@@ -1,5 +1,9 @@
 2005-11-22  Alexey Shchepin  <alexey@sevcom.net>
 
+	* src/mod_roster.erl: The "id" attribute of roster push packet was
+	missed (thanks to Maxim Ryazanov)
+	* src/mod_roster_odbc.erl: Likewise
+
 	* src/web/ejabberd_web_admin.erl: Fixed encoding of user names in
 	URLs
 
